Add support for Phraseapp branches
Background
==========
As of now, it is not possible to configue the Phraseapp branches we want to download and thus we are stuck with the default, master branch. This was also due to the fact that Phraseapp Java Client had no branching support prior to version 1.0.7.

Goal
====
Since version 1.0.7, the Phraseapp Java Client supports Phraseapp branches. The goal is to start using version 1.0.7 of Phraseapp Java Client and allow the configuration of the branch(es) to be downloaded.

--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
     <properties>
         <javaVersion>1.7</javaVersion>
         <mavenVersion>3.2.2</mavenVersion>
-        <phrase-java-client.version>1.0.6</phrase-java-client.version>
+        <phrase-java-client.version>1.0.7-SNAPSHOT</phrase-java-client.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <scm.connection>scm:git:git@github.com:mytaxi/phrase-maven-plugin.git</scm.connection>
         <scm.url>https://github.com/mytaxi/phrase-maven-plugin</scm.url>
